--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,10 +1,11 @@
-homeassistant-stubs==2024.11.0
+homeassistant-stubs==2024.12.0
 voluptuous-stubs==0.1.1
+aiofiles==25.1.0
 
 mypy==1.19.1
 pytest==8.3.3
-pytest-cov==5.0.0
+pytest-cov==6.0.0
 ruff==0.14.10
 
 # https://github.com/MatthewFlamm/pytest-homeassistant-custom-component/releases
-pytest-homeassistant-custom-component==0.13.181
+pytest-homeassistant-custom-component==0.13.190
